# Verinode

./: .gitignore  LICENSE  PR_DESCRIPTION.md  PR_SECURITY_FIXES.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: enterpriseController.ts  package-lock.json  package.json
backend/src/: index.js
backend/src/controllers/: marketplaceController.js
backend/src/routes/: search.js
config/: securityConfig.js
contracts/: Cargo.toml
contracts/src/: atomicSwap.rs  chainVerifier.rs  crossChainBridge.rs  lib.rs  messagePassing.rs  test.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/Marketplace/: TemplatePreview.jsx
frontend/src/components/Search/: AdvancedFilters.jsx  SearchBar.jsx
frontend/src/pages/: Marketplace.jsx
scripts/: securityAudit.js
src/graphql/: server.ts
src/graphql/resolvers/: crossChainResolver.ts
src/middleware/: corsConfig.ts  rateLimiter.ts
src/services/crossChain/: bridgeService.ts
