[package]
name = "verinode-contracts"
version = "0.1.0"
edition = "2021"
description = "Verinode Soroban smart contracts for cryptographic proof verification"
authors = ["Verinode Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
