[package]
name = "verinode-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
ripemd = "0.1"
ethers-core = "2.0"
web3 = "0.19"

[dev-dependencies]
solana-program-test = "1.18"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
